--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,6 +2,35 @@ body{
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+.z{
+  z-index: 400;
+}
+
+.search-result{
+  width: 100%;
+  height: auto;
+  padding: 4px 16px;
+  border-bottom: 1px solid #f3f3f3;
+  background-color: white;
+  color: #000;
+  border-radius: 5px;
+  p{
+color: #111;
+  }
+  h5{
+    font-size: 1rem;
+  }
+  p{
+    font-size: 0.8rem;
+  }
+}
+
+.result-card:hover{
+  background-color: #f7f7f7;
+  color: #333333;
+  border-bottom: 1px solid #e0e0e0;
+}
+
 
 .h-80vh{
   height: 84vh !important;
