--- a/frontend/src/components/ui/header.css
+++ b/frontend/src/components/ui/header.css
@@ -43,8 +43,9 @@ input{
         padding: 0 !important;
         text-align: center !important;
         h1{
-            font-size: 1.2em !important;
+            font-size: 0.85em !important;
             padding: 8px 0 !important;
+            margin-left: 0 !important;
         }
     }
 
@@ -55,7 +56,7 @@ input{
     }
 
     input{
-        width: 80% !important;
+        width: 100% !important;
         margin: 8px 0 !important;
         margin-left: 4px !important;
     }
